--- a/todo.txt
+++ b/todo.txt
@@ -1,96 +1,1 @@
-Bug:
-
-kommen results:
-kommen saved to database.
-ankommen saved to database.
-aufkommen saved to database.
-auskommen saved to database.
-daherkommen saved to database.
-davonkommen saved to database.
-dazukommen saved to database.
-durchkommen saved to database.
-entgegenkommen saved to database.
-herankommen saved to database.
-herauskommen saved to database.
-hereinkommen saved to database.
-herkommen saved to database.
-herüberkommen saved to database.
-herunterkommen saved to database.
-hervorkommen saved to database.
-hierherkommen saved to database.
-hineinkommen saved to database.
-hinzukommen saved to database.
-hochkommen saved to database.
-klarkommen saved to database.
-mitkommen saved to database.
-nachkommen saved to database.
-rauskommen saved to database.
-reinkommen saved to database.
-rüberkommen saved to database.
-runterkommen saved to database.
-übereinkommen saved to database.
-umkommen saved to database.
-vorankommen saved to database.
-vorbeikommen saved to database.
-vorkommen saved to database.
-wegkommen saved to database.
-weiterkommen saved to database.
-wiederkommen saved to database.
-zugutekommen saved to database.
-zukommen saved to database.
-zurechtkommen saved to database.
-zurückkommen saved to database.
-zusammenkommen saved to database.
-zuvorkommen saved to database.
-Kirche results:
-Kirche saved to database.
-Gemeinde results:
-Gemeinde saved to database.
-Mutter results:
-Mutter saved to database.
-aussehen results:
-Aussehen saved to database.
-ablenken has no definitions
-ablehnen has no definitions
-einordnen has no definitions
-melden results:
-melden saved to database.
-anmelden saved to database.
-rückmelden saved to database.
-sich anmelden saved to database.
-sich melden saved to database.
-Gedächtnis results:
-Gedächtnis saved to database.
-bewahren results:
-bewahren saved to database.
-aufbewahren saved to database.
-verstehen results:
-verstehen saved to database.
-se verstehen saved to database.
-erwähren has no definitions
-sein results:
-sein saved to database.
-sein is already in database.
-zusammensein saved to database.
-Notaufnahme results:
-Notaufnahme saved to database.
-betrogen results:
-betrügen saved to database.
-abnehmen has no definitions
-steigen results:
-steigen saved to database.
-absteigen saved to database.
-ansteigen saved to database.
-aufsteigen saved to database.
-aussteigen saved to database.
-einsteigen saved to database.
-hinaufsteigen saved to database.
-hochsteigen saved to database.
-umsteigen saved to database.
-zusteigen saved to database.
-umsteigen has no definitions
-zukommen has no definitions
-zustimmen has no definitions
-zulassen has no definitions
-AzureTranslate response to translate of 'Das Gericht schließt in sein Urteil ausdrücklich auch digital vertriebene Software ein.' was false.
-
+Make the `get_stmt(string $sql)` code a trait or put it in a base class.
