--- a/guzzle-exceptions-design.adoc
+++ b/guzzle-exceptions-design.adoc
@@ -18,10 +18,9 @@ Guzzle throws exceptions for errors that occur during a transfer.
 * A `GuzzleHttp\Exception\ConnectException` exception is thrown in the event of a networking error. This exception extends from `GuzzleHttp\Exception\TransferException`.
 * A `GuzzleHttp\Exception\ClientException` is thrown for **400** level errors if the `http_errors` request option is set to `true`. This exception extends from 
 `GuzzleHttp\Exception\BadResponseException` and `GuzzleHttp\Exception\BadResponseException` extends from `GuzzleHttp\Exception\RequestException`. +
-+
+
 ```php
-use GuzzleHttp\Psr7;
-use GuzzleHttp\Exception\ClientException;
+use GuzzleHttp\{Psr7, Exception\ClientException};
 
 try {
     $client->request('GET', 'https://github.com/_abc_123_404');
@@ -30,6 +29,7 @@ try {
     echo Psr7\Message::toString($e->getResponse());
 }
 ```
+
 * A `GuzzleHttp\Exception\ServerException` is thrown for **500** level errors if the http_errors request option is set to true. This exception extends from `GuzzleHttp\Exception\BadResponseException`.
 * A `GuzzleHttp\Exception\TooManyRedirectsException` is thrown when too many redirects are followed. This exception extends from `GuzzleHttp\Exception\RequestException`.
 
