--- a/bugs.adoc
+++ b/bugs.adoc
@@ -1,6 +1,11 @@
 = Bugs
 
-Surround both `insert_db($word)` and `insert_samples($word)` with the same commit/rollback.
+1. When a noun like **Macht** is looked up, the verb machen and its prefix versions are also returned; however, the current code does not handle this. Not expecting
+any verbs or a verb family, it does not detect this as a prefix verb family.
+
+The "solution" is not to save any verb definitions that accompany a noun that is looked up, but rather to filter it out.
+
+2. Surround both `insert_db($word)` and `insert_samples($word)` with the same commit/rollback.
 
 New code under development is in ~/temp:
 
