--- a/bugs.adoc
+++ b/bugs.adoc
@@ -13,7 +13,7 @@ Azure Pricing Tiers:
 * link:https://azure.microsoft.com/en-us/pricing/details/cognitive-services/translator/[Translator Pricing Tiers]
 * link:https://learn.microsoft.com/en-us/azure/ai-services/Translator/service-limits[Rate Limits] -- how often you can request text translation.
 
-== Deepl Translation Http Error Response Codes
+== Deepl Translation Response Status Codes
 
 See link:https://www.deepl.com/docs-api/api-access/error-handling[Error Handling]:
 
@@ -30,3 +30,23 @@ See link:https://www.deepl.com/docs-api/api-access/error-handling[Error Handling
 > If the error persists for a long time, please contact support@DeepL.com.
 
 When retrying failed requests, your application should implement an exponential-backoff strategy: increasing the delay time with each further failed request. All official DeepL client libraries implement this strategy, so they can be used as a reference.
+
+
+==  Azure Text Translation Response Status Codes
+
+See link:https://learn.microsoft.com/en-us/azure/ai-services/translator/reference/v3-0-translate#response-status-codes[Response Status Codes]
+
+The following are the possible HTTP status codes that a request returns.
+
+
+Expand table
+Status code	Description
+200	Success.
+400	One of the query parameters is missing or not valid. Correct request parameters before retrying.
+401	The request couldn't be authenticated. Check that credentials are specified and valid.
+403	The request isn't authorized. Check the details error message. This status code often indicates that you used all the free translations provided with a trial subscription.
+408	The request couldn't be fulfilled because a resource is missing. Check the details error message. When the request includes a custom category, this status code often indicates that the custom translation system isn't yet available to serve requests. The request should be retried after a waiting period (for example, 1 minute).
+429	The server rejected the request because the client exceeded request limits.
+500	An unexpected error occurred. If the error persists, report it with: date and time of the failure, request identifier from response header X-RequestId, and client identifier from request header X-ClientTraceId.
+503	Server temporarily unavailable. Retry the request. If the error persists, report it with: date and time of the failure, request identifier from response header X-RequestId, and client identifier from request header X-ClientTraceId.
+If an error occurs, the request returns a JSON error response. The error code is a 6-digit number combining the 3-digit HTTP status code followed by a 3-digit number to further categorize the error. Common error codes can be found on the v3 Translator reference page.
