--- a/bugs.adoc
+++ b/bugs.adoc
@@ -50,6 +50,8 @@ This link discussses link:https://learn.microsoft.com/en-us/answers/questions/14
 **TODO:** I need to determine how many characters I am requesting to be translated by the Text Translation REST API. There isn't an easy way to determine how fast to send requests. 
 So I will just throw an exception and log a "Character Count of XX per hour was exceeded for my tier of FXX. Try again in one hour. Your monthly quoted is XXX".
 
+* See `AzureTranslator::limitReached() : bool` and the new logic in `AzureTranslator::translate(string $inout, ...)`
+
 == Deepl Translation Response Status Codes
 
 See link:https://www.deepl.com/docs-api/api-access/error-handling[Error Handling]:
